tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/uninitialized_use_in_expression.fg
/; EXPECT_ERROR: VariableNotFound
const y:int = x + 5
const x:int = 10

